---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: RenameStmt(
                RenameStmt {
                    newname: "new_name",
                    behavior: Restrict,
                    relation: None,
                    relation_type: AccessMethod,
                    rename_type: Database,
                    subname: Some(
                        "name",
                    ),
                },
            ),
            stmt_location: 0,
            stmt_len: Some(
                39,
            ),
        },
        RawStmt {
            stmt: AlterOwnerStmt(
                Object({
                    "newowner": Object({
                        "location": Number(
                            70,
                        ),
                        "rolename": String(
                            "new_owner",
                        ),
                        "roletype": String(
                            "ROLESPEC_CSTRING",
                        ),
                    }),
                    "object": Object({
                        "String": Object({
                            "str": String(
                                "name",
                            ),
                        }),
                    }),
                    "objectType": String(
                        "OBJECT_DATABASE",
                    ),
                }),
            ),
            stmt_location: 40,
            stmt_len: Some(
                39,
            ),
        },
        RawStmt {
            stmt: AlterDatabaseStmt(
                Object({
                    "dbname": String(
                        "name",
                    ),
                    "options": Array([
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "String": Object({
                                        "str": String(
                                            "new_tablespace",
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "tablespace",
                                ),
                                "location": Number(
                                    116,
                                ),
                            }),
                        }),
                    ]),
                }),
            ),
            stmt_location: 80,
            stmt_len: Some(
                50,
            ),
        },
        RawStmt {
            stmt: AlterDatabaseSetStmt(
                Object({
                    "dbname": String(
                        "name",
                    ),
                    "setstmt": Object({
                        "kind": String(
                            "VAR_RESET",
                        ),
                        "name": String(
                            "configuration_parameter",
                        ),
                    }),
                }),
            ),
            stmt_location: 131,
            stmt_len: Some(
                50,
            ),
        },
        RawStmt {
            stmt: AlterDatabaseSetStmt(
                Object({
                    "dbname": String(
                        "name",
                    ),
                    "setstmt": Object({
                        "kind": String(
                            "VAR_RESET_ALL",
                        ),
                    }),
                }),
            ),
            stmt_location: 182,
            stmt_len: Some(
                30,
            ),
        },
    ],
)
